[metadata]
name = asphalt-sentry
description = Sentry integration component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-sentry
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6'

[options]
packages = asphalt.sentry
install_requires =
    asphalt ~= 4.0
    typeguard ~= 2.0
    raven >= 6.1
    raven-aiohttp >= 0.5.0

[options.extras_require]
test =
    pytest
    pytest-asyncio >= 0.7.0
    pytest-catchlog
    pytest-cov
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
   sentry = asphalt.sentry.component:SentryComponent

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.sentry
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
