[metadata]
name = asphalt-exceptions
description = Exception reporter component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-exceptions
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages =
    asphalt.exceptions
    asphalt.exceptions.reporters

install_requires =
    asphalt ~= 4.4
    typeguard ~= 2.0

[options.extras_require]
test =
    pytest
    pytest-asyncio >= 0.7.0
    pytest-catchlog
    pytest-cov
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0
    sphinxcontrib-asyncio >= 0.2.0
sentry =
    raven >= 6.1
    raven-aiohttp >= 0.5.0
raygun =
    raygun4py >= 3.1

[options.entry_points]
asphalt.components =
    exceptions = asphalt.exceptions.component:ExceptionReporterComponent
asphalt.exceptions.reporters =
    sentry = asphalt.exceptions.reporters.sentry:SentryExceptionReporter
    raygun = asphalt.exceptions.reporters.raygun:RaygunExceptionReporter

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.exceptions
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
